--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
@@ -7,6 +7,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main>
+      <div class="resume">
+        <div class="container">
+          <!-- Resume Block -->
+          <div class="resume__block">
+            <h1 class="contact-info__header">John Smith</h1>
+            <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+
+            <!-- Contact Info Container -->
+            <div class="contact_info_container fh">
+              <div class="contact-info__block"></div>
+              <div class="contact-info__block contact-info__block--center">
+                <img
+                  class="contact-info__avatar"
+                  src="assets/avatar.png"
+                  alt="Avatar"
+                />
+              </div>
+
+              <div class="contact-info__block"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Contact Info -->
+    <div class="container">
+      <div class="resume__block">
+        <div class="contact-info">
+          <a href="" rel="author" class="contact-info__item">
+            <div class="contact-info__item-icon-wrapper">
+            </div>
+            <span>Lviv, Ukraine</span>
+          </a>
+          <a
+            href="https://ua.linkedin.com/company/binary-studio_241166"
+            rel="author"
+            class="contact-info__item"
+          >
+            <div class="contact-info__item-icon-wrapper">
+            </div>
+            <span>binary-studio</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Intro Block -->
+    <div class="container">
+      <div class="resume__block">
+        <div class="intro">
+          <div class="intro__icon-wrapper">
+            <svg
+              class="intro__icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7
+                24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0
+                26.5 21.5 48 48 48h128c26.5 0 48-21.5
+                48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64
+                64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6
+                32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5
+                48-48V304c0-26.5-21.5-48-48-48z"
+              ></path>
+            </svg>
+          </div>
+          <p class="intro_text">
+            I'm John, a software developer driven by innovation and
+            problem-solving. With a strong background in computer science,
+            I'm dedicated to pushing boundaries and crafting elegant
+            solutions through code.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
